--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "yoga-website",
   "private": true,
+  "homepage": "https://theshivammaheshwari.github.io/yoga",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
